<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.startscreen.StartFragment">

    <FrameLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size176"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo_monochrome_white"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/progressBarConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size72"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layoutBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size176">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewCredentialFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size16"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/il_serverAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/size8"
                        android:layout_weight="1"
                        android:hint="@string/start_et_hint_serverAddress"
                        app:boxBackgroundColor="?android:colorBackground"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_serverAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="1234567890."
                            android:inputType="number"
                            android:maxLength="15"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/il_serverPort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/start_et_hint_serverPort"
                        app:boxBackgroundColor="?android:colorBackground"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_serverPort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="5"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_et_hint_userName"
                    app:boxBackgroundColor="?android:colorBackground"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="16"
                        android:singleLine="true">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_et_hint_password"
                    app:boxBackgroundColor="?android:colorBackground"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/size24"
            android:paddingStart="@dimen/size24"
            android:paddingEnd="@dimen/size24"
            android:text="@string/start_btn_connect" />

    </FrameLayout>

</FrameLayout>